--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "scripts": {
     "dev": "gulp",
     "build": "gulp prod",
-    "prod": "gulp prod"
+    " ": "gulp prod"
   },
   "repository": {
     "type": "git",
